; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_schedule.c_wake_up_sleepers.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_schedule.c_wake_up_sleepers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SLEEPQ_SLEEP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @wake_up_sleepers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wake_up_sleepers(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @sleepq_lock(i8* %4)
  %6 = load i8*, i8** %2, align 8
  %7 = load i32, i32* @SLEEPQ_SLEEP, align 4
  %8 = call i32 @sleepq_signal(i8* %6, i32 %7, i32 0, i32 0)
  store i32 %8, i32* %3, align 4
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @sleepq_release(i8* %9)
  %11 = load i32, i32* %3, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = call i32 (...) @kick_proc0()
  br label %15

15:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @sleepq_lock(i8*) #1

declare dso_local i32 @sleepq_signal(i8*, i32, i32, i32) #1

declare dso_local i32 @sleepq_release(i8*) #1

declare dso_local i32 @kick_proc0(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
